--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1708,6 +1708,17 @@
     <p class="footnote">4. Mt. 6, 34.</p>
     <p class="footnote">5. Gen. 32, 16.</p>
     <p class="footnote">6. Ex. 30, 10; Lév. 16, 34; Cf. AB. 88.</p>
+    <p><em>ⲙⲏϣ</em> et <em>ⲕⲟⲩϫⲓ</em> sont proprement des noms qui peuvent être employés adjectivement:</p>
+    <p><em>ⲟⲩ-ⲙⲏϣ ⲛ̀ⲉϩⲟⲟⲩ</em> «beaucoup de jours»<sup class="footnote">1</sup>.</p>
+    <p><em>ϩⲁⲛ-ⲕⲟⲩϫⲓ ⲛ̀ⲉϩⲟⲟⲩ</em> «peu de jours»<sup class="footnote">2</sup>.</p>
+    <p><em>ϩⲟⲩⲟ</em> est un adverbe qui peut déterminer un substantif ou un verbe avec <em>ⲉⲣ-</em>:</p>
+    <p><em>ϥⲛⲁⲧⲟⲩⲃⲟϥ ϩⲓⲛⲁ ⲛ̀ⲧⲉϥⲉⲛ ϩⲟⲩⲟ-ⲟⲩⲧⲁϩ ⲉⲃⲟⲗ</em> «il le purifiera afin qu'il rapporte plus de fruits»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲉⲣ-ϩⲟⲩⲟ-ϭⲓⲥⲓ</em> «exalter grandement».</p>
+    <p>Dans le sens de pronoms indéfinis, s'emploient aussi quelquefois les substantifs <em>ⲣⲱⲙⲓ</em> «homme», <em>ϩⲱⲃ</em> «chose», ⲥⲁϫⲓ «parole, chose»: <em>ⲁ ⲡⲓⲥⲁϫⲓ ⲇⲉ ϣⲱⲡⲓ ⲉϥⲛⲁϣⲧ</em> «la chose fut pénible»<sup class="footnote">4</sup>.</p>
+    <p class="footnote">1. Nomb. 20, 15.</p>
+    <p class="footnote">2. D. 536.</p>
+    <p class="footnote">3. Jean 15, 2.</p>
+    <p class="footnote">4. Gen. 21, 11. Cf. AB. 44, 45.</p>
   </div>
 </div>
 	</body>
