--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1719,6 +1719,81 @@
     <p class="footnote">2. D. 536.</p>
     <p class="footnote">3. Jean 15, 2.</p>
     <p class="footnote">4. Gen. 21, 11. Cf. AB. 44, 45.</p>
+    <p>II. Nom.</p>
+    <p>Sous le terme de <i>nom</i> nous comprenons ici les substantifs, les adjectifs et les nombres.</p>
+    <p>Chapitre VI.</p>
+    <p>Formation, Genre et Nombre des Noms.</p>
+    <p>I. Formation et genre.</p>
+    <p>Les noms sont: primitifs, dérivés ou composés.</p>
+    <p>Les noms <i>primitifs</i> sont formés de la racine elle-même sans addition: <em>ⲥⲟⲛ</em> «frère».</p>
+    <p>Les noms <i>dérivés</i> sont formés d'une racine et de suffixes: <em>ⲥⲱⲛ-ⲓ</em> «sœur».</p>
+    <p>Les noms <i>composés</i> sont formés d'une racine et de préfixes. Nous appelons préfixe tout mot ou toute particule mis en tête d'un autre mot et unis à lui dans l'écriture: <em>ⲙⲉⲧ-ⲥⲟⲛ</em> «fraternité».</p>
+    <p>1. Noms primitifs.</p>
+    <p>Les noms primitifs ont été transcrits de l'égyptien d'après les règles exposées plus haut § 13 et suivants. Il est donc inutile de revenir ici sur leur formation.</p>
+    <p><i>Genre.</i></p>
+    <p>Il y a en copte deux genres: le masculin et le féminin. En égyptien les noms féminins étaient terminés par <i>t</i>; cette terminaison ayant disparu en copte (22), les noms féminins offrent souvent la même finale que les noms masculins dont la dernière consonne est aussi tombée (21):</p>
+    <p><i>masc.</i> <em>ⲣⲱⲙⲓ</em>, <em>ⲥⲟⲛⲓ</em>; <i>fém.</i> <em>ⲥϩⲓⲙⲓ</em>, <em>ⲥⲱⲛⲓ</em>.</p>
+    <p>Il est donc impossible de les distinguer à leur forme extérieure.</p>
+    <p>On peut cependant faire les remarques suivantes:</p>
+    <p>1. Quelques noms sont des deux genres avec une différence de sens:</p>
+    <p><em>ϯ-ⲁⲫⲉ</em> «la tête», <em>ⲡⲓ-ⲁⲫⲉ</em> «le chef»;</p>
+    <p><em>ϯ-ⲃⲏⲧ</em> «la côte», <em>ⲡⲓ-ⲃⲏⲧ</em> «la palme»;</p>
+    <p><em>ϯ-ϫⲟⲓ</em> «le mur», <em>ⲡⲓ-ϫⲟⲓ</em> «la barque».</p>
+    <p>2. Avec une différence de sexe (noms épicènes):</p>
+    <p><em>ⲡⲓ-ⲁⲗⲟⲩ</em> «le garçon», <em>ϯ-ⲁⲗⲟⲩ</em> «la fille»;</p>
+    <p><em>ⲡⲓ-ⲉϩⲉ</em> «le bœuf», <em>ϯ-ⲉϩⲉ</em> «la vache».</p>
+    <p>A cette catégorie se rattachent les noms de fruits qui au masc. désignent le fruit lui-même, et au fém. l'arbre producteur:</p>
+    <p><em>ⲡⲓ-ⲁⲗⲟⲗⲓ</em> «le raisin», <em>ϯ-ⲁⲗⲟⲗⲓ</em> «la vigne»;</p>
+    <p><em>ⲡⲓ-ⲕⲉⲛⲧⲉ</em> «la figue», <em>ϯ-ⲕⲉⲛⲧⲉ</em> «le figuier».</p>
+    <p>3. Dans le même sens:</p>
+    <p><em>ⲡⲓ- ϯ- ⲥⲃⲉ</em> «la porte»;</p>
+    <p><em>ⲡⲓ- ϯ- ϫⲉⲃⲥ</em> «le charbon».</p>
+    <p>4. Les noms neutres grecs sont déterminés par l'article masc. en copte, les autres noms gardent leur genre: <em>ⲡⲓ-ⲥⲱⲙⲁ</em> «le corps», <em>ⲡⲓ-ⲡⲛⲉⲩⲙⲁ</em> «l'esprit».</p>
+    <p>2. Noms dérivés.</p>
+    <p>Les principales terminaisons qui s'ajoutent à la racine pour former de nouveaux mots sont <em>ⲉ</em>, <em>ⲓ</em>, <em>ⲱ</em>, <em>ϥ</em>, <em>ⲥ</em>, <em>ⲧ</em>.</p>
+    <p>1. <em>ⲉ</em> <i>masc.</i>, <em>ⲏ</em> <i>fém.</i> forment des adjectifs; le radical prend <em>ⲁ</em> ou bien <em>ⲉ</em> après la première consonne. La terminaison a parfois disparu après <em>ⲧ</em>:</p>
+    <p><em>ϣⲁϥⲉ</em>, <i>fém.</i> <em>ϣⲁϥⲏ</em> «désert», de <em>ϣⲱϥ</em> «dévaster»;</p>
+    <p><em>ϣⲁϥⲧ</em> «méchant», de <em>ϣⲱϥⲧ</em> «se tromper»;</p>
+    <p><em>ⲑⲉϣⲉ</em>, <i>fém.</i> <em>ⲑⲉϣⲏ</em> «voisin», de <em>ⲑⲟϣ</em> «limite»;</p>
+    <p><em>ⲛⲉϣⲧⲉ</em> «dur», de <em>ⲛ̀ϣⲟⲧ</em> «être dur».</p>
+    <p>2. <em>ⲓ</em> forme des substantifs féminins:</p>
+    <p><em>ⲟⲩⲟⲃϣⲓ</em> «blancheur», de <em>ⲟⲩⲟⲃϣ</em> «blanc»;</p>
+    <p><em>ⲏⲡⲓ</em> «nombre», de <em>ⲱⲡ</em> «compter»;</p>
+    <p><em>ϩⲗⲏϫⲓ</em> «douceur», de <em>ϩⲗⲟϫ</em> «devenir doux»;</p>
+    <p><em>ϩⲣⲏϫⲓ</em> «pesanteur», de <em>ϩⲣⲟϫ</em> «devenir lourd».</p>
+    <p><em>ⲓ</em> forme aussi le féminin de quelques adjectifs:</p>
+    <p><em>ϣⲟⲣⲡ</em> «premier», <i>fém.</i> <em>ϣⲟⲣⲡⲓ</em>;</p>
+    <p><em>ϣⲟⲙⲧ</em> «trois», <i>fém.</i> <em>ϣⲟⲙϯ</em>;</p>
+    <p><em>ⲕⲟⲩⲣ</em> «sourd», <i>fém.</i> <em>ⲕⲁⲩⲣⲓ</em>.</p>
+    <p>3. <em>ⲱ</em> forme également des noms féminins:</p>
+    <p><em>ϩⲉⲃⲥⲱ</em> «vêtement», de <em>ϩⲱⲃⲥ</em> «vêtir»;</p>
+    <p><em>ϫⲁϫⲱ</em> «marmite», de <em>ϫⲱϫ</em> «faire cuire»;</p>
+    <p><em>ⲉⲧⲫⲱ</em> «fardeau», de <em>ⲱⲧⲡ</em> «porter».</p>
+    <p>4. <em>ϥ</em> forme des noms masculins:</p>
+    <p><em>ⲛⲁϩⲃⲉϥ</em> «joug», de <em>ⲛⲟϩⲉⲃ</em> «atteler»;</p>
+    <p><em>ⲣⲱⲟⲩⲧϥ</em> «allégresse», de <em>ⲣⲱⲟⲩⲧ</em> «joyeux».</p>
+    <p>On emploie de même <em>ϥ</em> avec les <i>formes avec suffixes</i> des noms et des verbes lorsqu'on veut les prendre dans un sens absolu, sans indication de personne:</p>
+    <p><em>ⲡ-ⲧⲱⲛϥ</em> «l'action de se lever», de <em>ⲧⲱⲟⲩⲛ</em> «se lever»;</p>
+    <p><em>ⲣⲁⲛⲁϥ</em> «le bon plaisir», de <em>ⲣⲁⲛⲉ-</em> «plaire à»;</p>
+    <p><em>ⲡⲓ-ⲡⲉⲑⲛⲁⲛⲉϥ</em> «le bien», de <em>ⲉⲑⲛⲁⲛⲉ⸗</em> «bon»;</p>
+    <p><em>ⲡⲓ-ϭⲓϩⲣⲁϥ</em> «le respect humain», de <em>ϭⲓ</em> «prendre» et <em>ϩⲣ⸗</em> «face»;</p>
+    <p><em>ϯ-ⲙⲉⲧⲣⲁⲛⲁϥ ⲛ̀ⲣⲱⲙⲓ</em> «la complaisance humaine»<sup class="footnote">1</sup>.</p>
+    <p>5. <em>ⲥ</em> forme des noms féminins:</p>
+    <p><em>ⲑⲱⲟⲩⲧⲥ</em> «réunion», de <em>ⲑⲱⲟⲩϯ</em> «réunir»;</p>
+    <p><em>ⲕⲉⲗⲡⲥ</em> «vol», de <em>ⲕⲱⲗⲡ</em> «voler <em>سَرَقَ</em>»;</p>
+    <p><em>ⲑⲣⲁⲡⲥ</em> «aiguille», de <em>ⲑⲱⲣⲡ</em> «coudre»;</p>
+    <p><em>ⲥⲟⲣⲙⲉⲥ</em> «erreur», de <em>ⲥⲱⲣⲉⲙ</em> «errer».</p>
+    <p>6. <em>ⲧ</em> vocalisé <em>ⲏⲧ</em> ou <em>ⲓⲧ</em>:</p>
+    <p><em>ϣⲉⲙϣⲏⲧ</em> «serviteur», de <em>ϣⲉⲙϣⲓ</em> «servir»;</p>
+    <p><em>ϩⲁⲗⲏⲧ</em> «oiseau <em>طائر</em>», de <em>ϩⲱⲗ</em> «voler <em>طار</em>»;</p>
+    <p><em>ⲙⲉⲛⲣⲓⲧ</em> «ami», de <em>ⲙⲉⲓ</em>, <em>ⲙⲉⲛⲣⲉ-</em> «aimer».</p>
+    <p>Ces derniers mots sont des qualitatifs devenus substantifs.</p>
+    <p>3. Noms composés.</p>
+    <p>La première partie du composé, le préfixe (121), peut être un nom, un verbe ou une particule. C'est toujours une forme abrégée. La seconde partie, qui a l'accent tonique, est un nom ou un verbe à l'infinitif.</p>
+    <p><i>1. Le préfixe est un nom.</i></p>
+    <p>Il y a en copte un nombre assez restreint de noms qui ont une forme abrégée et peuvent être employés comme préfixes.</p>
+    <p>Voici les principaux avec quelques exemples:</p>
+    <p class="footnote">1. C. 189, 23.</p>
   </div>
 </div>
 	</body>
