--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1794,6 +1794,24 @@
     <p>Il y a en copte un nombre assez restreint de noms qui ont une forme abrégée et peuvent être employés comme préfixes.</p>
     <p>Voici les principaux avec quelques exemples:</p>
     <p class="footnote">1. C. 189, 23.</p>
+    <p>1. <em>ⲓⲟⲣ ⲓⲁⲣ-</em> «canal»,</p>
+    <p>2. <em>ⲓⲟϩⲓ ⲓⲁϩ-</em> «champ»,</p>
+    <p>3. <em>ⲙⲁ-ⲛ̀-</em> «lieu de»,</p>
+    <p>4. <em>ⲛⲏⲃ ⲛⲉⲃ-</em> «maître»,</p>
+    <p>5. <em>ⲣⲱⲙⲓ ⲣⲉⲙ-</em> «homme»,</p>
+    <p>6. <em>ⲥⲑⲟⲓ ⲥⲑⲩ- ⲥϯ-</em> «odeur»,</p>
+    <p>7. <em>ϧⲉⲗ-</em> «personne»,</p>
+    <p>8. <em>ϩⲱⲃ ϩⲉⲃ-</em> «chose».</p>
+    <p><i>Exemples:</i></p>
+    <p>1. <em>ⲓⲁⲣⲟ</em> (grand canal) «fleuve, le Nil». <em>ⲟ</em> <i>fém.</i> <em>ⲱ</em> est un ancien adjectif qui en ég. signifiait «grand» et qui ne s'est maintenu en copte que dans les noms composés (cf. <em>ⲟⲩⲣⲟ</em> roi, <em>ⲟⲩⲣⲱ</em> reine; <em>ϧⲉⲗⲗⲟ</em> vieillard, <em>ϧⲉⲗⲗⲱ</em> vieille femme).</p>
+    <p>2. <em>ⲓⲁϩϫⲱⲓⲧ</em> «champ d'oliviers», <em>ⲓⲁϩⲁⲗⲟⲗⲓ</em> «vigne», <em>ⲓⲁϩϣϣⲏⲛ</em> «forêt».</p>
+    <p>3. <em>ⲙⲁ-ⲛ̀-</em> est toujours suivi d'un verbe: <em>ⲙⲁⲛ̀ϣⲱⲡⲓ</em> «demeure», <em>ⲙⲁⲛ̀ⲫⲱⲧ</em> «refuge», <em>ⲙⲁⲛ̀ϣⲁⲓ</em> «orient», <em>ⲙⲁⲛ̀ϩⲱⲧⲡ</em> «occident».</p>
+    <p>4. <em>ⲛⲉⲃⲏⲓ</em> «maître de maison», <em>ⲛⲉⲃⲁϩⲓ</em> «âgé», <em>ⲛⲉⲃⲟϩⲓ</em> «maître du troupeau», <em>ⲛⲉⲃⲓⲟϩⲓ</em> «maître du champ».</p>
+    <p>5. <em>ⲣⲉⲙ-</em> et plus généralement <em>ⲣⲉⲙⲛ̀-</em> forme des noms de profession; devant un nom de ville ou de lieu, il indique les habitants: <em>ⲣⲉⲙⲛ̀ϩⲱⲃ</em> «ouvrier», <em>ⲣⲉⲙⲣⲁⲕⲟϯ</em> «Alexandrin», <em>ⲣⲉⲙⲙ̀ⲃⲉⲧⲥ</em> «guerrier», <em>ⲣⲉⲙⲛ̀ⲭⲏⲙⲓ</em> «Egyptien», <em>ⲣⲉⲙⲙ̀ⲃⲁⲕⲓ</em> «citadin», <em>ⲣⲉⲙϯⲫⲟⲓⲛⲓⲕⲏ</em> «Phénicien»<sup class="footnote">1</sup>.</p>
+    <p>6. <em>ⲥⲑⲟⲓⲛⲟⲩϥⲓ ⲥⲑⲩⲛⲟⲩϥⲓ</em> «encens, bonne odeur», <em>ⲥⲑⲟⲓⲃⲱⲛ ⲥⲑⲩⲃⲱⲛ</em> «mauvaise odeur».</p>
+    <p>7. <em>ϧⲉⲗ-</em> n'est employé qu'en composition: <em>ϧⲉⲗϣⲓⲣⲓ</em> «jeune homme», <em>ϧⲉⲗϣⲁⲓⲣⲓ</em> «jeune fille»; <em>ϧⲉⲗⲗⲟ</em> «vieillard», <em>ϧⲉⲗⲗⲱ</em> «vieille femme».</p>
+    <p>8. <em>ϩⲉⲃⲛⲟⲩϥⲓ</em> «bonne action», <em>ϩⲉⲃⲃⲱⲛ</em> «mauvaise action».</p>
+    <p class="footnote">1. C. 94, 18.</p>
   </div>
 </div>
 	</body>
