--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1812,6 +1812,26 @@
     <p>7. <em>ϧⲉⲗ-</em> n'est employé qu'en composition: <em>ϧⲉⲗϣⲓⲣⲓ</em> «jeune homme», <em>ϧⲉⲗϣⲁⲓⲣⲓ</em> «jeune fille»; <em>ϧⲉⲗⲗⲟ</em> «vieillard», <em>ϧⲉⲗⲗⲱ</em> «vieille femme».</p>
     <p>8. <em>ϩⲉⲃⲛⲟⲩϥⲓ</em> «bonne action», <em>ϩⲉⲃⲃⲱⲛ</em> «mauvaise action».</p>
     <p class="footnote">1. C. 94, 18.</p>
+    <p><i>2. Le préfixe est un verbe.</i></p>
+    <p>Dans ces composés, la seconde partie est toujours un substantif; ils sont de tout point semblables aux mots composés français <i>coupe-papier</i>, <i>garde-robe</i>, etc. Le verbe prend <em>ⲁ</em> après la première radicale; le substantif reste invariable:</p>
+    <p><em>ⲙⲁⲓ-ⲛⲟⲩϯ</em> «qui aime Dieu», de <em>ⲙⲉⲓ</em> «aimer».</p>
+    <p>Il y a ainsi une quinzaine de verbes qui forment des composés; ces mots s'emploient <i>adjectivement</i>, c.-à-d. après un substantif auquel ils s'unissent au moyen de <em>ⲛ̀</em>. Tels sont:</p>
+    <p><em>ⲁⲛ-ϣⲉ</em> «chef de cent, centenier» de <em>ⲓⲛⲓ</em> «conduire», <em>ⲁⲛϣⲟ</em> «chef de mille».</p>
+    <p><em>ⲗⲁϥ-ⲥϩⲓⲙⲓ</em> «luxurieux», de <em>ⲗⲓⲃⲓ</em> «délirer».</p>
+    <p><em>ⲙⲁⲓ-ϩⲁⲧ</em> «qui aime l'argent», <em>ⲙⲁⲓ-ϩⲏⲕⲓ</em> «qui aime les pauvres», <em>ⲙⲁⲓ-ⲣⲱⲙⲓ</em> «qui aime les hommes», etc.</p>
+    <p><em>ⲙⲁⲛ-ⲉⲥⲱⲟⲩ</em> «berger, pasteur», de <em>ⲙⲟⲛⲓ</em> «faire paître», <em>ⲙⲁⲛ-ϫⲁⲙⲟⲩⲗ</em> «chamelier», etc.</p>
+    <p><em>ⲛⲁϣⲧ-ⲛⲁϩⲃⲓ</em> «à tête dure», de <em>ⲛ̀ϣⲟⲧ</em> «être dur».</p>
+    <p><em>ⲟⲩⲁⲙ-ⲥⲛⲟϥ</em> «sanguinaire», de <em>ⲟⲩⲱⲙ</em> «manger», etc.</p>
+    <p><em>ⲫⲁⲥ-ⲥⲟϫⲉⲛ</em> «parfumeur», de <em>ⲫⲓⲥⲓ</em> «faire cuire».</p>
+    <p><em>ⲫⲁϣ-ⲙⲟⲩ</em> «à moitié mort» de <em>ⲫⲱϣ</em> «diviser».</p>
+    <p><em>ϥⲁⲓ-ϣⲓⲛⲓ</em> «messager», de <em>ϥⲁⲓ</em> «porter».</p>
+    <p><em>ϧⲁⲧⲉⲃ-ⲣⲱⲙⲓ</em> «meurtrier» de <em>ϧⲱⲧⲉⲃ</em> «tuer».</p>
+    <p><em>ϣⲁⲙϣⲉ-ⲛⲟⲩϯ</em> «serviteur de Dieu», de <em>ϣⲉⲙϣⲓ</em> «servir», <em>ϣⲁⲙϣⲉ-ⲓⲇⲱⲗⲟⲛ</em> «idolâtre».</p>
+    <p><em>ϫⲁⲃⲓ-ϩⲏⲧ</em> et <em>ϫⲁϥ-ϩⲏⲧ</em> «lâche», de (<em>ϫⲉⲃⲓ</em>) «être faible».</p>
+    <p><em>ϫⲁϫ-ϣⲁⲓ</em> «qui a le nez coupé», de <em>ϫⲱϫ</em> «couper».</p>
+    <p><em>ϭⲁⲓ-ⲃⲉⲭⲉ</em> «mercenaire», de <em>ϭⲓ</em> «recevoir» et <em>ⲃⲉⲭⲉ</em> «salaire».</p>
+    <p><em>ϭⲁⲥⲓ-ⲃⲁⲗ</em> «orgueilleux», de <em>ϭⲓⲥⲓ</em> «exalter»; <em>ϭⲁⲥⲓϩⲏⲧ</em> «fier, altier».</p>
+    <p><i>3. Le préfixe est une particule.</i></p>
   </div>
 </div>
 	</body>
