--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1832,6 +1832,21 @@
     <p><em>ϭⲁⲓ-ⲃⲉⲭⲉ</em> «mercenaire», de <em>ϭⲓ</em> «recevoir» et <em>ⲃⲉⲭⲉ</em> «salaire».</p>
     <p><em>ϭⲁⲥⲓ-ⲃⲁⲗ</em> «orgueilleux», de <em>ϭⲓⲥⲓ</em> «exalter»; <em>ϭⲁⲥⲓϩⲏⲧ</em> «fier, altier».</p>
     <p><i>3. Le préfixe est une particule.</i></p>
+    <p>Voici les principales particules préfixes:</p>
+    <p><em>ⲁⲛ-</em> (collection),</p>
+    <p><em>ⲁⲧ-</em> «sans»,</p>
+    <p><em>ⲉ-</em> (profession),</p>
+    <p><em>ⲗⲁ-</em> (abondance),</p>
+    <p><em>ⲙⲉⲧ-</em>, <em>ⲙⲉⲑ-</em> (état),</p>
+    <p><em>ⲣⲉϥ-</em> (agent),</p>
+    <p><em>ⲥⲁ</em> (profession),</p>
+    <p><em>ϣⲟⲩ-</em> «digne de»,</p>
+    <p><em>ϩⲁ-</em> (commencement),</p>
+    <p><em>ϩⲁⲙ-</em>, <em>ⲁⲙ-</em> «ouvrier»,</p>
+    <p><em>ϫⲓⲛ-</em> «action de».</p>
+    <p><em>ⲁⲛ-</em> s'unit surtout aux noms de nombres pour indiquer la collection:</p>
+    <p><em>ϣⲁϣϥ</em> «sept», <em>ⲁⲛϣⲁϣϥ</em> «semaine»;</p>
+    <p><em>ⲙⲉⲧ</em> «dix», <em>ⲁⲛⲙⲉⲧ</em> «dizaine»;</p>
   </div>
 </div>
 	</body>
