--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1847,6 +1847,16 @@
     <p><em>ⲁⲛ-</em> s'unit surtout aux noms de nombres pour indiquer la collection:</p>
     <p><em>ϣⲁϣϥ</em> «sept», <em>ⲁⲛϣⲁϣϥ</em> «semaine»;</p>
     <p><em>ⲙⲉⲧ</em> «dix», <em>ⲁⲛⲙⲉⲧ</em> «dizaine»;</p>
+    <p><em>ⲛ̅</em> (<em>ⲧⲁⲓⲟⲩ</em>) «cinquante», <em>ⲁⲛⲛ̅</em> «cinquantaine»;</p>
+    <p><em>ⲣ̅</em> (<em>ϣⲉ</em>) «cent», <em>ⲁⲛⲣ̅</em> «centaine»;</p>
+    <p><em>ϣⲟ</em> «mille», <em>ϩⲁⲛ-ⲁⲛϣⲟ</em> «des milliers».</p>
+    <p>On peut même redoubler <em>ⲁⲛ-</em>: <em>ⲛⲓⲁⲛⲁⲛϣⲟ ⲛ̀ϣⲟ</em> «les milliers de milliers»<sup class="footnote">1</sup>.</p>
+    <p>On trouve aussi <em>ⲁⲛ-ⲧⲱⲟⲩ</em> «chaîne de montagnes».</p>
+    <p><em>ⲁⲧ-</em> (<em>ⲁⲑ-</em> devant <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em>) forme des adjectifs privatifs d'un fréquent usage:</p>
+    <p><em>ⲁⲧⲥⲙⲏ</em> «sans voix, muet»;</p>
+    <p><em>ⲁⲧⲯⲩⲭⲏ</em> «sans âme, lâche»;</p>
+    <p><em>ⲁⲧ</em> s'emploie surtout avec l'infinitif potentiel formé de <em>ϣ-</em> «pouvoir»:</p>
+    <p class="footnote">1. Th. 77.</p>
   </div>
 </div>
 	</body>
