--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1857,6 +1857,161 @@
     <p><em>ⲁⲧⲯⲩⲭⲏ</em> «sans âme, lâche»;</p>
     <p><em>ⲁⲧ</em> s'emploie surtout avec l'infinitif potentiel formé de <em>ϣ-</em> «pouvoir»:</p>
     <p class="footnote">1. Th. 77.</p>
+    <p><em>ⲁⲧϣⲁⲙⲁϩⲓ</em> «impuissant», <em>ⲁⲧϣⲥⲁϫⲓ ⲙ̀ⲙⲟϥ</em> «indicible».</p>
+    <p><em>ⲉ-</em> forme avec un verbe quelques noms de profession:</p>
+    <p><em>ⲕⲱⲧ</em> «construire», <em>ⲉⲕⲱⲧ</em> «architecte»;</p>
+    <p><em>ϣⲱⲧ</em> «négocier», <em>ⲉϣⲱⲧ</em> «négociant».</p>
+    <p><em>ⲗⲁ-</em> indique l'abondance devant les substantifs et les adjectifs: <em>ⲗⲁϥⲱⲓ</em> «poilu», <em>ⲗⲁϫⲁⲗ</em> «touffu», <em>ⲗⲁⲟⲩⲁⲓ</em> «tout à fait un», <em>ⲗⲁⲙⲁϧⲧ</em> «glouton»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙⲉⲧ-</em> <em>ⲙⲉⲑ-</em> forme des substantifs abstraits qui sont tous féminins:</p>
+    <p><em>ⲁⲗⲟⲩ</em> «enfant», <em>ⲙⲉⲧⲁⲗⲟⲩ</em> «enfance»;</p>
+    <p><em>ⲙⲏⲓ</em> «vrai», <em>ⲙⲉⲑⲙⲏⲓ</em> «vérité»;</p>
+    <p><em>ⲟⲩⲁⲓ</em> «un», <em>ⲙⲉⲑⲟⲩⲁⲓ</em> «unité».</p>
+    <p><em>ⲣⲉϥ-</em> s'emploie devant l'infinitif et le qualitatif des verbes pour former le nom <i>d'agent</i>:</p>
+    <p><em>ⲥⲱⲛⲧ</em> «créer», <em>ⲣⲉϥⲥⲱⲛⲧ</em> «créateur»;</p>
+    <p><em>ϣⲱⲛⲓ</em> «être malade», <em>ⲣⲉϥϣⲱⲛⲓ</em> «malade»;</p>
+    <p><em>ⲙⲱⲟⲩⲧ</em> «être mort», <em>ⲣⲉϥⲙⲱⲟⲩⲧ</em> «mort».</p>
+    <p>L'infinitif peut avoir un complément: <em>ⲡⲁⲣⲉϥⲛⲁϩⲙⲉⲧ</em> «mon sauveur».</p>
+    <p><em>ⲥⲁ</em> suivi de <em>ⲛ̀</em> forme des noms de profession:</p>
+    <p><em>ϣⲁⲣ</em> «cuir», <em>ⲥⲁⲛ̀ϣⲁⲣ</em> «corroyeur»;</p>
+    <p><em>ⲕⲁⲡ</em> «corde», <em>ⲥⲁⲛ̀ⲕⲁⲡ</em> «cordier»;</p>
+    <p>et dans un sens métaphorique: <em>ⲥⲁ-ⲙ̀-ⲡⲉⲧϩⲱⲟⲩ</em> «fabricant de mal, méchant»;</p>
+    <p><em>ⲥⲁ-ⲙ̀-ⲙⲉⲑⲛⲟⲩϫ</em> «menteur».</p>
+    <p class="footnote">1. Sur l'origine égyptienne de <em>ⲗⲁ-</em>, cf. une note de <i>K. Pichl</i> dans «Sphinx» IV, 231.</p>
+    <p><em>ϣⲟⲩ-</em> «digne de» forme des adjectifs qui sont toujours à l'état pronominal:</p>
+    <p><em>ⲧⲁⲓⲟ</em> «vénérer», <em>ϣⲟⲩⲧⲁⲓⲟ⸗</em> «vénérable»;</p>
+    <p><em>ⲙⲉⲓ</em> «aimer», <em>ϣⲟⲩⲙⲉⲛⲣⲓⲧ⸗</em> «digne d'être aimé»;</p>
+    <p><em>ⲉⲣϣⲫⲏⲣⲓ</em> «admirer», <em>ϣⲟⲩⲉⲣϣⲫⲏⲣⲓ ⲙ̀ⲙⲟ⸗</em> «admirable»;</p>
+    <p><em>ⲟⲩⲣⲱⲙⲓ ⲛ̀ϣⲟⲩⲧⲁⲓⲟϥ</em> «un homme vénérable».</p>
+    <p><em>ϩⲁⲙ-</em>, et par chute du <em>ϩ</em> initial <em>ⲁⲙ-</em>, est un ancien mot qui signifiait «ouvrier», il est resté dans quelques noms de profession:</p>
+    <p><em>ϣⲉ</em> «bois», <em>ϩⲁⲙϣⲉ</em>, <em>ⲁⲙϣⲉ</em> «charpentier»;</p>
+    <p><em>ⲕⲉⲗⲓ</em> «serrure», <em>ϩⲁⲙⲕⲉⲗⲓ</em> «serrurier».</p>
+    <p><em>ϩⲁ-</em> indique le plus haut point, le commencement d'une chose:</p>
+    <p><em>ⲣⲟ</em> «bouche», <em>ϩⲁⲛ̀ⲣⲟ</em> «lèvre»;</p>
+    <p><em>ⲧⲟⲟⲩⲓ</em> «la matinée», <em>ϩⲁ-ⲛⲁ-ⲧⲟⲟⲩⲓ</em> «le matin»;</p>
+    <p><em>ⲣⲟⲩϩⲓ</em> «la soirée», <em>ϩⲁ-ⲛⲁ-ⲣⲟⲩϩⲓ</em> «le soir»;</p>
+    <p><em>ⲙⲉⲣⲓ</em> «midi», <em>ϩⲁ-ⲛⲁ-ⲙⲉⲣⲓ</em> «midi».</p>
+    <p>La particule <em>ϩⲁ-</em> peut être considérée comme l'état construit de <em>ϩⲏ</em> «commencement».</p>
+    <p><em>ϫⲓⲛ-</em> (S. <em>ϭⲓⲛ-</em>) forme le substantif verbal (<em>مصدر</em>):</p>
+    <p><em>ⲙⲟϣⲓ</em> «marcher», <em>ⲡⲓϫⲓⲛⲙⲟϣⲓ</em> «la marche»;</p>
+    <p><em>ⲱϣ</em> «lire», <em>ⲡⲓϫⲓⲛⲱϣ</em> «l'action de lire».</p>
+    <p>Ces substantifs sont généralement du masculin. Cependant quand ils indiquent la <i>manière</i> dont est faite l'action exprimée par le verbe, plutôt que cette action elle-même, ils sont du féminin:</p>
+    <p><em>ϯϫⲓⲛⲁⲙⲟⲛⲓ ⲛ̀ⲧⲟⲧ⸗</em> «la patience»<sup class="footnote">1</sup>;</p>
+    <p><em>ϯϫⲓⲛⲟϩⲓ ⲉⲣⲁⲧ⸗</em> «la tenue»<sup class="footnote">2</sup>;</p>
+    <p class="footnote">1. G. 88. 2.</p>
+    <p class="footnote">2. Ib. 6.</p>
+    <p><em>ϯϫⲓⲛⲥⲁϫⲓ</em> «la conversation»<sup class="footnote">1</sup>;</p>
+    <p><em>ϯϫⲓⲛⲉⲣϩⲱⲃ</em> «la manière d'agir»<sup class="footnote">2</sup>.</p>
+    <p><i>Remarques.</i></p>
+    <p>1. Les mots qui commencent par <em>ⲃ</em> prennent parfois un <em>ⲙ̀</em> initial sans changer de sens:</p>
+    <p><em>ⲃⲣⲉϩⲓ</em> et <em>ⲙ̀ⲃⲣⲉϩⲓ</em> «char»;</p>
+    <p><em>ⲃⲣⲁⲓ</em> et <em>ⲙ̀ⲃⲣⲁⲓ</em> «plat de lentilles»;</p>
+    <p><em>ⲃⲣⲟⲩⲭⲟⲥ</em> et <em>ⲙ̀ⲃⲣⲟⲩⲭⲟⲥ</em> «sauterelle».</p>
+    <p>2. Les mots qui commencent par <em>ⲭ</em> <em>ϣ</em> prennent aussi <em>ⲛ̀</em> et quelquefois changent de sens:</p>
+    <p><em>ϣⲁϣⲓ</em> = <em>ⲛ̀ϣⲁϣⲓ</em> = <em>ⲉⲛϣⲁϣⲓ</em> «amertume»;</p>
+    <p><em>ϣⲱⲧ</em> «couper», <em>ⲉⲛϣⲱⲧ</em> «hache»;</p>
+    <p><em>ⲭⲁⲓ</em> = <em>ⲛ̀ⲭⲁⲓ</em> = <em>ⲉⲛⲭⲁⲓ</em> «chose»;</p>
+    <p><em>ⲭⲣⲟϯ</em> = <em>ⲉⲛⲭⲣⲟϯ</em> «enfants».</p>
+    <p>II. Pluriel des noms.</p>
+    <p>Il y a en copte deux nombres: le singulier et le pluriel.</p>
+    <p>Pour la plupart des noms, le pluriel est semblable au singulier, il ne se distingue que par l'article:</p>
+    <p><em>ⲡⲓ-ⲣⲱⲙⲓ</em> «l'homme», <em>ⲛⲓ-ⲣⲱⲙⲓ</em> «les hommes»;</p>
+    <p><em>ⲡⲓ-ϣⲏⲣⲓ</em> «le fils», <em>ⲛⲓ-ϣⲏⲣⲓ</em> «les fils».</p>
+    <p>Cependant un assez grand nombre de noms ont au pluriel une terminaison particulière. Dans l'ancien égyptien les terminaisons du pluriel étaient <i>w</i> pour le masc., <i>wt</i> (prononcé <i>ouit</i>) pour le féminin. De la première, dérive en copte le plur. masc. en <em>ⲟⲩ</em>; de la seconde, le plur. fém. en <em>ⲟⲩⲓ</em> (S. <em>ⲟⲩⲉ</em>).</p>
+    <p>1. Pluriels masculins.</p>
+    <p><i>1. Noms masculins terminés par une voyelle.</i></p>
+    <p>La terminaison <em>ⲟⲩ</em> peut être précédée des voyelles <em>ⲱ</em> <em>ⲏ</em> <em>ⲉ</em> accentuées.</p>
+    <p class="footnote">1. Ib. 7.</p>
+    <p class="footnote">2. D. 539.</p>
+    <p>1. <em>ⲱⲟⲩ</em> forme le pluriel des noms masc. terminés en <em>ⲟ</em>:</p>
+    <p><em>ⲣⲟ</em> «porte», <i>pl.</i> <em>ⲣⲱⲟⲩ</em>;</p>
+    <p><em>ⲟⲩⲣⲟ</em> «roi», <i>pl.</i> <em>ⲟⲩⲣⲱⲟⲩ</em>;</p>
+    <p><em>ⲓⲁⲣⲟ</em> «fleuve», <i>pl.</i> <em>ⲓⲁⲣⲱⲟⲩ</em>;</p>
+    <p><em>ⲉⲃⲟ</em> «muet», <i>pl.</i> <em>ⲉⲃⲱⲟⲩ</em>;</p>
+    <p><em>ⲟⲩⲉϫⲣⲟ</em> «montant de porte», <i>pl.</i> <em>ⲟⲩⲉϫⲣⲱⲟⲩ</em>;</p>
+    <p><em>ϣⲉⲙⲙⲟ</em> «étranger», <i>pl.</i> <em>ϣⲉⲙⲙⲱⲟⲩ</em>;</p>
+    <p><em>ϣⲧⲉⲕⲟ</em> «prison», <i>pl.</i> <em>ϣⲧⲉⲕⲱⲟⲩ</em>.</p>
+    <p>Quelques noms en <em>ⲟ</em> ont aussi un plur. en <em>ⲟⲓ</em>:</p>
+    <p><em>ⲣⲁⲙⲁⲟ</em> «riche», <i>pl.</i> <em>ⲣⲁⲙⲁⲱⲟⲩ</em> et <em>ⲣⲁⲙⲁⲟⲓ</em>;</p>
+    <p><em>ϧⲉⲗⲗⲟ</em> «vieillard» <i>pl.</i> <em>ϧⲉⲗⲗⲟⲓ</em>.</p>
+    <p>2. <em>ⲏⲟⲩ</em> (S. <em>ⲏⲩ</em>) forme le pluriel des <i>substantifs</i> masculins terminés en <em>ⲉ</em>:</p>
+    <p><em>ⲁⲙⲣⲉ</em> «boulanger», <i>pl.</i> <em>ⲁⲙⲣⲏⲟⲩ</em>;</p>
+    <p><em>ⲃⲉⲭⲉ</em> «salaire», <i>pl.</i> <em>ⲃⲉⲭⲏⲟⲩ</em>;</p>
+    <p><em>ϣⲛⲉ</em> «filet», <i>pl.</i> <em>ϣⲛⲏⲟⲩ</em>;</p>
+    <p><em>ϣϫⲉ</em> «sauterelle», <i>pl.</i> <em>ϣϫⲏⲟⲩ</em>.</p>
+    <p>Suivent cette règle les deux mots: <em>ⲥⲟⲛ</em> «frère», <i>pl.</i> <em>ⲥⲛⲏⲟⲩ</em>; <em>ϫⲟⲓ</em> «barque», <i>pl.</i> <em>ⲉϫⲏⲟⲩ</em>.</p>
+    <p>3. <em>ⲉⲩ</em> (S. <em>ⲉⲉⲩ</em>) forme le pluriel des noms dérivés en <em>ⲉ</em> (124):</p>
+    <p><em>ⲥⲁⲃⲉ</em> «sage», <i>pl.</i> <em>ⲥⲁⲃⲉⲩ</em>;</p>
+    <p><em>ⲃⲉⲗⲗⲉ</em> «aveugle», <i>pl.</i> <em>ⲃⲉⲗⲗⲉⲩ</em>;</p>
+    <p><em>ⲙⲉⲑⲣⲉ</em> «témoin», <i>pl.</i> <em>ⲙⲉⲑⲣⲉⲩ</em>;</p>
+    <p><em>ⲑⲉϣⲉ</em> «voisin», <i>pl.</i> <em>ⲑⲉϣⲉⲩ</em>;</p>
+    <p><em>ϣⲁϥⲉ</em> «désert», <i>pl.</i> <em>ϣⲁϥⲉⲩ</em>.</p>
+    <p><i>2. Noms masculins terminés par une consonne.</i></p>
+    <p>Les noms terminés par une consonne forment, en général, leur pluriel par un changement intérieur de voyelles. C'est quelque chose d'analogue au <i>pluriel brisé</i> arabe (<em>الجمع المكسَّر</em>). Les changements se réduisent à quatre principaux:</p>
+    <p>1. <em>ⲁⲩ</em> dans les mots suivants:</p>
+    <p><em>ⲁⲛⲁϣ</em> «serment», <i>pl.</i> <em>ⲁⲛⲁⲩϣ</em>;</p>
+    <p><em>ⲥⲛⲁϩ</em> «lien», <i>pl.</i> <em>ⲥⲛⲁⲩϩ</em>;</p>
+    <p><em>ⲁⲑⲁϩ</em> «fardeau», <i>pl.</i> <em>ⲁⲑⲁⲩϩ</em>;</p>
+    <p><em>ϭⲛⲁϩ</em> «bras», <i>pl.</i> <em>ϭⲛⲁⲩϩ</em>;</p>
+    <p><em>ⲙ̀ⲕⲁϩ</em> «douleur, peine», <i>pl.</i> <em>ⲙ̀ⲕⲁⲩϩ</em>;</p>
+    <p><em>ⲉⲑⲱϣ</em> «Ethiopien», <i>pl.</i> <em>ⲉⲑⲁⲩϣ</em>;</p>
+    <p><em>ϭⲁⲗⲟϫ</em> «pied», <i>pl.</i> <em>ϭⲁⲗⲁⲩϫ</em>.</p>
+    <p>2. Changement de <em>ⲟ</em> en <em>ⲱ</em> dans les mots terminés par <em>ⲣ</em> et dans plusieurs autres:</p>
+    <p><em>ⲁϩⲟ</em> «trésor» (21), <i>pl.</i> <em>ⲁϩⲱⲣ</em>;</p>
+    <p><em>ⲟⲩϩⲟⲣ</em> «chien», <i>pl.</i> <em>ⲟⲩϩⲱⲣ</em>;</p>
+    <p><em>ϩⲑⲟ</em> «cheval» (21), <i>pl.</i> <em>ϩⲧⲱⲣ</em>;</p>
+    <p><em>ϣⲗⲟⲕ</em> «cruche», <i>pl.</i> <em>ϣⲗⲱⲕ</em>;</p>
+    <p><em>ϣⲗⲟⲗ</em> «nation», <i>pl.</i> <em>ϣⲗⲱⲗ</em>;</p>
+    <p><em>ϩⲃⲟⲥ</em> «habit», <i>pl.</i> <em>ϩⲃⲱⲥ</em>;</p>
+    <p><em>ϩϥⲟⲧ</em> «aune», <i>pl.</i> <em>ϩϥⲱⲧ</em>;</p>
+    <p><em>ϫⲣⲟϫ</em> «semence», <i>pl.</i> <em>ϫⲣⲱϫ</em>.</p>
+    <p>3. Les noms terminés en <em>ⲏⲧ</em>, <em>ⲓⲧ</em> forment leur pluriel en <em>ⲁϯ</em>:</p>
+    <p><em>ⲃⲏⲧ</em> «palme», <i>pl.</i> <em>ⲃⲁϯ</em>;</p>
+    <p><em>ⲙⲉⲛⲣⲓⲧ</em> «ami, chéri», <i>pl.</i> <em>ⲙⲉⲛⲣⲁϯ</em>;</p>
+    <p><em>ⲟⲩⲣⲓⲧ</em> «gardien», <i>pl.</i> <em>ⲟⲩⲣⲁϯ</em>;</p>
+    <p><em>ⲣⲉⲙⲏⲧ</em> «dixième partie, dîme», <i>pl.</i> <em>ⲣⲉⲙⲁϯ</em>;</p>
+    <p><em>ϩⲁⲗⲏⲧ</em> «oiseau», <i>pl.</i> <em>ϩⲁⲗⲁϯ</em>;</p>
+    <p><em>ϩⲟⲩⲓⲧ</em> «premier», <i>pl.</i> <em>ϩⲟⲩⲁϯ</em>.</p>
+    <p>4. Quelques noms changent la voyelle longue en brève et ajoutent <em>ⲓ</em>:</p>
+    <p><em>ⲁⲃⲱⲕ</em> «corbeau», <i>pl.</i> <em>ⲁⲃⲟⲕⲓ</em>;</p>
+    <p><em>ⲁⲫⲱⲫ</em> «géant», <i>pl.</i> <em>ⲁⲫⲟⲫⲓ</em>;</p>
+    <p><em>ϣⲫⲏⲣ</em> «compagnon», <i>pl.</i> <em>ϣⲫⲉⲣⲓ</em>;</p>
+    <p><em>ⲓⲱⲧ</em> «père», <i>pl.</i> <em>ⲓⲟϯ</em>;</p>
+    <p><em>ⲉϣⲱⲧ</em> «marchand», <i>pl.</i> <em>ⲉϣⲟⲧ</em>;</p>
+    <p><em>ⲙⲟⲩⲧ</em> «nerf» (29), <i>pl.</i> <em>ⲙⲟϯ</em>;</p>
+    <p><em>ⲙⲉϣϣⲱⲧ</em> «champ», <i>pl.</i> <em>ⲙⲉϣϣⲟϯ</em>;</p>
+    <p><em>ⲙ̀ⲛⲟⲩⲧ</em> «mamelle» (29), <i>pl.</i> <em>ⲙ̀ⲛⲟϯ</em>;</p>
+    <p>ainsi que tous les autres noms en <em>ⲱⲧ</em>. Le mot <em>ϧⲣⲟϯ</em> «enfants» n'a pas conservé son singulier.</p>
+    <p>2. Pluriels féminins.</p>
+    <p>La terminaison du pluriel féminin <em>ⲟⲩⲓ</em> (145) peut être précédée des voyelles accentuées <em>ⲱ</em> <em>ⲏ</em>.</p>
+    <p>1. <em>ⲱⲟⲩⲓ</em> forme le pluriel des noms féminins terminés en <em>ⲱ</em> et en <em>ⲏ</em>:</p>
+    <p><em>ⲉⲧⲫⲱ</em> «poids, charge», <i>pl.</i> <em>ⲉⲧⲫⲱⲟⲩⲓ</em>;</p>
+    <p><em>ⲉⲣⲙⲏ</em> «larme», <i>pl.</i> <em>ⲉⲣⲙⲱⲟⲩⲓ</em>.</p>
+    <p>Quelques noms masculins forment leur pluriel de la même manière:</p>
+    <p><em>ⲁⲗⲟⲩ</em> «enfant», <i>pl.</i> <em>ⲁⲗⲱⲟⲩⲓ</em>;</p>
+    <p><em>ⲣⲉϥϫⲱ</em> «chantre», <i>pl.</i> <em>ⲣⲉϥϫⲱⲟⲩⲓ</em>;</p>
+    <p><em>ⲥⲫⲓⲣ</em> «côté», <i>pl.</i> <em>ⲥⲫⲓⲣⲱⲟⲩⲓ</em>;</p>
+    <p><em>ⲙⲱⲓⲧ</em> «chemin», <i>pl.</i> <em>ⲙⲓⲧⲱⲟⲩⲓ</em>.</p>
+    <p>2. <em>ⲏⲟⲩⲓ</em> forme le pluriel des noms féminins en <em>ⲉ</em>:</p>
+    <p><em>ⲁⲫⲉ</em> «tête», <i>pl.</i> <em>ⲁⲫⲏⲟⲩⲓ</em>;</p>
+    <p><em>ⲫⲉ</em> «ciel», <i>pl.</i> <em>ⲫⲏⲟⲩⲓ</em>;</p>
+    <p><em>ϧⲣⲉ</em> «nourriture, mets», <i>pl.</i> <em>ϧⲣⲏⲟⲩⲓ</em>;</p>
+    <p>et d'une manière analogue celui des masculins:</p>
+    <p><em>ⲉⲣⲫⲉⲓ</em> «temple», <i>pl.</i> <em>ⲉⲣⲫⲏⲟⲩⲓ</em>;</p>
+    <p><em>ϩⲱⲃ</em> «chose», <i>pl.</i> <em>ϩⲃⲏⲟⲩⲓ</em>.</p>
+    <p><i>Remarque.</i> Il est un certain nombre de pluriels qui n'entrent pas dans les modèles qui précèdent. On les apprendra par l'usage. Tels sont:</p>
+    <p><em>ϩⲓⲟⲙⲓ</em> <i>plur.</i> de <em>ⲥϩⲓⲙⲓ</em> «femme»;</p>
+    <p><em>ⲁⲙⲁⲓⲟⲩ</em> <i>plur.</i> de <em>ⲓⲟⲙ</em> «mer».</p>
+    <p><i>Remarques pour l'emploi du pluriel.</i></p>
+    <p>1. La forme du pluriel est obligatoire pour un certain nombre de mots; on les apprendra par le dictionnaire:</p>
+    <p><em>ⲛⲓ-ⲫⲏⲟⲩⲓ</em> «les cieux» (et non pas <em>ⲛⲓ-ⲫⲉ</em>).</p>
+    <p>2. Les autres peuvent garder au pluriel la forme du sing.; ainsi on dit également:</p>
+    <p><em>ⲛⲓⲕⲁⲗⲁⲙⲫⲟ</em> et <em>ⲛⲓⲕⲁⲗⲁⲙⲫⲱⲟⲩ</em> «les collines».</p>
+    <p>Il y a cependant cette différence entre ces deux manières de s'exprimer, que la forme du sing. avec l'article défini pl. indique plutôt plusieurs <i>individus</i> pris séparément, tandis que la forme du pluriel désigne l'espèce, l'ensemble, la collectivité; aussi cette forme prend plus volontiers l'article indéfini <em>ϩⲁⲛ</em>:</p>
+    <p><em>ⲛⲓ-ⲥⲁϧ</em> «les scribes» (pris individuellement), <em>ϩⲁⲛ-ⲥⲁϧⲉⲩ</em> «quelques scribes, un certain nombre de scribes».</p>
+    <p><i>Noms grecs.</i></p>
+    <p>Les noms grecs introduits en copte ne changent pas au pluriel: <em>ⲡⲓⲥⲱⲙⲁ</em>, <em>ⲛⲓⲥⲱⲙⲁ</em>.</p>
+    <p>Il n'y a d'exception que pour <em>ⲁⲩⲗⲏ</em> «cour» et <em>ⲯⲩⲭⲏ</em> «âme» qui ont parfois un pluriel copte: <em>ⲁⲩⲗⲏⲟⲩ</em>, <em>ⲯⲩⲭⲏⲟⲩ</em> ou <em>ⲯⲩⲭⲱⲟⲩⲓ</em>.</p>
+    <p>En S. les noms grecs en <em>ⲏ</em> ont parfois un plur. en <em>ⲟⲟⲩⲉ</em>: <em>ⲯⲩⲭⲏ</em>, <em>ⲯⲩⲭⲟⲟⲩⲉ</em>; <em>ⲅⲣⲁⲫⲏ</em>, <em>ⲅⲣⲁⲫⲟⲟⲩⲉ</em>.</p>
   </div>
 </div>
 	</body>
