--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2012,6 +2012,39 @@
     <p>Les noms grecs introduits en copte ne changent pas au pluriel: <em>ⲡⲓⲥⲱⲙⲁ</em>, <em>ⲛⲓⲥⲱⲙⲁ</em>.</p>
     <p>Il n'y a d'exception que pour <em>ⲁⲩⲗⲏ</em> «cour» et <em>ⲯⲩⲭⲏ</em> «âme» qui ont parfois un pluriel copte: <em>ⲁⲩⲗⲏⲟⲩ</em>, <em>ⲯⲩⲭⲏⲟⲩ</em> ou <em>ⲯⲩⲭⲱⲟⲩⲓ</em>.</p>
     <p>En S. les noms grecs en <em>ⲏ</em> ont parfois un plur. en <em>ⲟⲟⲩⲉ</em>: <em>ⲯⲩⲭⲏ</em>, <em>ⲯⲩⲭⲟⲟⲩⲉ</em>; <em>ⲅⲣⲁⲫⲏ</em>, <em>ⲅⲣⲁⲫⲟⲟⲩⲉ</em>.</p>
+    <p>Chapitre VII.</p>
+    <p>Relations des Noms Entr'eux.</p>
+    <p>I. Apposition.</p>
+    <p>1. Lorsqu'un nom commun ou propre est mis en apposition à un nom propre, il le suit avec l'article et sans particule:</p>
+    <p><em>ⲓⲱⲁⲛⲛⲏⲥ ⲡⲓⲣⲉϥϯⲱⲙⲥ</em> «Jean-Baptiste».</p>
+    <p><em>ⲏⲣⲱⲇⲏⲥ ⲡⲟⲩⲣⲟ</em> «le roi Hérode»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲡϭⲟⲓⲥ ⲫϯ</em> «le Seigneur Dieu».</p>
+    <p><em>ⲓⲥⲁⲁⲕ ⲡⲉϥϣⲏⲣⲓ</em> «son fils Isaac»<sup class="footnote">2</sup>.</p>
+    <p>2. Lorsqu'un nom propre est mis en apposition à un nom commun ou à un pronom, il est ordinairement précédé de <em>ϫⲉ</em> qu'on pourrait traduire par «nommé»:</p>
+    <p><em>ⲡⲓⲣⲱⲙⲓ ϫⲉ ⲗⲱⲧ</em> «l'homme nommé Lot »<sup class="footnote">3</sup>.</p>
+    <p><em>ⲟⲩϣϣⲏⲛ ϫⲉ ⲥⲁⲃⲉⲕ</em> «un arbre appelé <i>sabek</i>»<sup class="footnote">4</sup>.</p>
+    <p>Parfois <em>ϫⲉ</em> est supprimé:</p>
+    <p><em>ϯⲡⲟⲗⲓⲥ ⲕⲉϥⲧ</em> «la ville de Keft»<sup class="footnote">5</sup>.</p>
+    <p>Il l'est toujours après les noms qui indiquent des titres honorifiques comme <em>ⲁⲃⲃⲁ</em>, <em>ⲁⲡⲁ</em>, <em>ⲙⲁⲕⲁⲣⲓⲟⲥ</em>; après <em>ⲁⲃⲟⲧ</em> «mois»:</p>
+    <p><em>ⲁⲃⲃⲁ ⲇⲁⲛⲓⲏⲗ</em> «l'abbé Daniel».</p>
+    <p><em>ⲁⲡⲁ ⲡϣⲱⲓ</em> «l'abbé Bschai».</p>
+    <p><em>ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ</em> «le mois d'Epip»<sup class="footnote">6</sup>.</p>
+    <p>3. Lorsqu'un nom commun est mis en apposition à un autre nom commun, il est uni à lui comme un adjectif au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em> 28):</p>
+    <p><em>ⲛⲉⲛⲓⲟϯ ⲛ̀ⲁⲡⲟⲥⲧⲟⲗⲟⲥ</em> «nos Pères, les Apôtres».</p>
+    <p><em>ⲡⲓⲥⲟⲛ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ</em> «le frère moine»<sup class="footnote">7</sup>.</p>
+    <p>Quelquefois il prend l'article sans <em>ⲛ̀</em>:</p>
+    <p><em>ⲛⲉⲕⲉⲃⲓⲁⲓⲕ ⲛⲓⲡⲣⲟⲫⲏⲧⲏⲥ</em> «tes serviteurs, les prophètes»<sup class="footnote">8</sup>.</p>
+    <p>4. L'apposition d'un nom à un pronom personnel absolu ou affixe se fait au moyen de la particule <em>ϧⲁ</em>:</p>
+    <p><em>ⲁⲛⲟⲕ ϧⲁ ⲡⲓϫⲱⲃ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ</em> «moi, faible pécheur»<sup class="footnote">9</sup>.</p>
+    <p class="footnote">1. Mt. 2, 1.</p>
+    <p class="footnote">2. Gen. 22, 6.</p>
+    <p class="footnote">3. Gen. 19, 9.</p>
+    <p class="footnote">4. Gen. 22, 13.</p>
+    <p class="footnote">5. Kef. 415.</p>
+    <p class="footnote">6. Kef. 415.</p>
+    <p class="footnote">7. Kef. 352.</p>
+    <p class="footnote">8. Bar. 2, 26.</p>
+    <p class="footnote">9. Th. 290.</p>
   </div>
 </div>
 	</body>
