--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2045,6 +2045,24 @@
     <p class="footnote">7. Kef. 352.</p>
     <p class="footnote">8. Bar. 2, 26.</p>
     <p class="footnote">9. Th. 290.</p>
+    <p><em>ⲁⲛⲟⲛ ⲧⲏⲣⲉⲛ ϧⲁ ⲡⲉⲕⲗⲁⲟⲥ</em> «nous tous, ton peuple»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲟⲩⲟⲓ ⲛⲱⲧⲉⲛ ϧⲁ ⲛⲓⲣⲁⲙⲁⲟⲓ</em> «malheur à vous, riches»<sup class="footnote">2</sup>.</p>
+    <p>Lorsque le mot mis en apposition est un pronom, voir § 63.</p>
+    <p>5. Un nom de nombre mis en apposition prend <em>ⲛ̀</em> (<em>ⲙ̀</em>):</p>
+    <p><em>ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲙ̀ⲡⲥⲛⲁⲩ</em> «ils se tinrent debout, tous les deux»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲙ̀ⲡⲥⲛⲁⲩ ⲉⲩⲥⲟⲡ</em> «ils s'en allèrent, tous les deux ensemble»<sup class="footnote">4</sup>.</p>
+    <p>II. Annexion.</p>
+    <p>Nous entendons par <i>annexion</i> (<em>اضافة</em>) le rapport d'un nom à son complément déterminatif. Pour éviter toute équivoque, nous appellerons le premier <i>nom régissant</i> (<em>المضاف</em>) et le second <i>nom régi</i> (<em>المضاف اليه</em>).</p>
+    <p>L'annexion se faisait en égyptien par la simple addition du nom régi au nom régissant: il nous en est resté quelques exemples dans les noms composés (131).</p>
+    <p>En dehors de ce cas, l'annexion se fait en copte au moyen des deux particules <em>ⲛ̀</em> (<em>ⲙ̀</em> devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>) et <em>ⲛ̀ⲧⲉ</em>. <em>ⲛ̀</em> forme l'annexion <i>indéterminée</i>, <em>ⲛ̀ⲧⲉ</em> l'annexion <i>déterminée</i>.</p>
+    <p>1. Emploi de <em>ⲛ̀</em>.</p>
+    <p><em>ⲛ̀</em> (<em>ⲙ̀</em>) s'emploie: 1. Quand le nom régi est indéterminé, c-à-d. qu'il n'a pas d'article:</p>
+    <p><em>ⲟⲩⲭⲗⲟⲙ ⲛ̀ⲛⲟⲩⲃ</em> «une couronne d'or»;</p>
+    <p><em>ⲟⲩⲭⲗⲟⲗ ⲛ̀ϩⲁⲧ</em> «un collier d'argent».</p>
+    <p class="footnote">1. Th. 128.</p>
+    <p class="footnote">2. Luc 6, 24.</p>
+    <p class="footnote">3. AM. 150, 20.</p>
+    <p class="footnote">4. Gen. 22, 6.</p>
   </div>
 </div>
 	</body>
