--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2063,6 +2063,38 @@
     <p class="footnote">2. Luc 6, 24.</p>
     <p class="footnote">3. AM. 150, 20.</p>
     <p class="footnote">4. Gen. 22, 6.</p>
+    <p>2. Après les locutions prépositives <em>ⲙ̀-ⲫ-ⲣⲏϯ</em> «à la manière de», <em>ⲙ̀-ⲡ-ⲉⲙⲑⲟ</em> «en présence de», <em>ϧⲁ-ⲧ-ϩⲏ</em> «en face de», <em>ϩⲓ-ⲧ-ϩⲏ</em> «devant», etc.</p>
+    <p><em>ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡϭⲟⲓⲥ</em> «en présence du Seigneur»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲥⲁⲣⲁⲑⲏⲟⲩ</em> «comme une tempête»<sup class="footnote">2</sup>.</p>
+    <p>3. Après les formes avec suffixes des substantifs cités au § 55:</p>
+    <p><em>ⲁⲩⲣⲏϫϥ ⲙ̀ⲡⲕⲁϩⲓ</em> «l'extrémité de la terre»<sup class="footnote">3</sup>.</p>
+    <p><em>ϧⲁϫⲱⲟⲩ ⲛ̀ⲛⲓⲕⲁⲗⲁⲙⲫⲟ</em> «avant les collines»<sup class="footnote">4</sup>.</p>
+    <p>4. Lorsque le nom régissant a l'article <em>ⲛⲉⲛ</em>:</p>
+    <p><em>ⲛⲉⲛⲃⲁⲗ ⲙ̀ⲡϭⲟⲓⲥ</em> «les yeux du Seigneur»<sup class="footnote">5</sup>.</p>
+    <p>2. Emploi de <em>ⲛ̀ⲧⲉ</em>.</p>
+    <p><em>ⲛ̀ⲧⲉ</em> s'emploie:</p>
+    <p>1. Entre deux noms propres:</p>
+    <p><em>ⲙⲁⲣⲓⲁ ⲛ̀ⲧⲉ ⲓⲁⲕⲱⲃⲟⲥ</em> «Marie, (mère) de Jacob»<sup class="footnote">6</sup>.</p>
+    <p><em>ϧⲉⲛ ⲧⲕⲁⲛⲁ ⲛ̀ⲧⲉ ϯⲅⲁⲗⲓⲗⲉⲁ</em> «à Cana de Galilée»<sup class="footnote">7</sup>.</p>
+    <p>2. Lorsque le nom régissant a l'article fort <em>ⲡⲓ</em> <em>ϯ</em> <em>ⲛⲓ</em>:</p>
+    <p><em>ϯϩⲟϯ ⲛ̀ⲧⲉ ⲡϭⲟⲓⲥ</em> «la crainte du Seigneur»<sup class="footnote">8</sup>.</p>
+    <p><em>ⲡⲓⲥⲑⲉⲣⲧⲉⲣ ⲛ̀ⲧⲉ ⲛⲓⲛⲁϫϩⲓ</em> «le grincement des dents»<sup class="footnote">9</sup>.</p>
+    <p>3. Quand le nom régissant a l'article indéfini <em>ⲟⲩ</em> <em>ϩⲁⲛ</em> et que le nom régi a un article défini ou indéfini:</p>
+    <p><em>ⲟⲩϣϣⲏⲛ ⲛ̀ⲧⲉ ⲡⲱⲛϧ</em> «l'arbre de vie»<sup class="footnote">10</sup>.</p>
+    <p><em>ⲟⲩⲭⲗⲟⲙ ⲛ̀ⲧⲉ ϩⲁⲛϩⲙⲟⲧ</em> «une couronne de grâces»<sup class="footnote">11</sup>.</p>
+    <p><em>ϩⲁⲛⲣⲟⲙⲡⲓ ⲛ̀ⲧⲉ ⲡⲱⲛϧ</em> «des années de vie»<sup class="footnote">12</sup>.</p>
+    <p class="footnote">1. Pr. 3, 4.</p>
+    <p class="footnote">2. Pr. 1, 27.</p>
+    <p class="footnote">3. Jér. 10, 13.</p>
+    <p class="footnote">4. Pr. 8, 24.</p>
+    <p class="footnote">5. Ps. 33, 16.</p>
+    <p class="footnote">6. Luc 24, 10.</p>
+    <p class="footnote">7. Jean 2, 1.</p>
+    <p class="footnote">8. Pr. 1, 7.</p>
+    <p class="footnote">9. Mt. 8, 12.</p>
+    <p class="footnote">10. Pr. 3, 18.</p>
+    <p class="footnote">11. Pr. 1, 9.</p>
+    <p class="footnote">12. Pr. 2, 19.</p>
   </div>
 </div>
 	</body>
