--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2095,6 +2095,17 @@
     <p class="footnote">10. Pr. 3, 18.</p>
     <p class="footnote">11. Pr. 1, 9.</p>
     <p class="footnote">12. Pr. 2, 19.</p>
+    <p>4. Quand le nom régi est séparé du nom régissant par quelque déterminatif:</p>
+    <p><em>ⲛⲓⲉⲥⲱⲟⲩ ⲉⲧⲥⲱⲣⲉⲙ ⲛ̀ⲧⲉ ⲡⲏⲓ ⲙ̀ⲡⲓⲥⲣⲁⲏⲗ</em> «les brebis égarées de la maison d'Israël»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ</em> «toute la terre d'Egypte»<sup class="footnote">2</sup>.</p>
+    <p><i>Remarques.</i></p>
+    <p>1. Lorsque le nom régissant a l'article faible <em>ⲡ</em> <em>ⲧ</em>, on emploie à volonté <em>ⲛ̀</em> ou <em>ⲛ̀ⲧⲉ</em>.</p>
+    <p>2. Lorsqu'il y a plusieurs compléments déterminatifs à la suite, on ne répète pas la préposition de l'annexion:</p>
+    <p><em>ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡϭⲟⲓⲥ ⲛⲉⲙ ⲛⲓⲣⲱⲙⲓ</em> «devant le Seigneur et les hommes»<sup class="footnote">3</sup>.</p>
+    <p><em>ϩⲁⲛⲁϩⲱⲣ ⲛ̀ⲛⲟⲩⲃ ϩⲓ ϩⲁⲧ</em> «des trésors d'or et d'argent»<sup class="footnote">4</sup>.</p>
+    <p>Chapitre VIII.</p>
+    <p>Des Adjectifs en Particulier.</p>
+    <p>I. Formation.</p>
   </div>
 </div>
 	</body>
