--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2106,6 +2106,44 @@
     <p>Chapitre VIII.</p>
     <p>Des Adjectifs en Particulier.</p>
     <p>I. Formation.</p>
+    <p>La langue copte possède relativement peu d'adjectifs proprement dits, surtout d'adjectifs primitifs. On a vu §§ 124, 125, la formation des adjectifs dérivés; et §§ 135, 137, 141, celle des adjectifs composés.</p>
+    <p class="footnote">1. Mt. 10, 6.</p>
+    <p class="footnote">2. Ex. 8, 20.</p>
+    <p class="footnote">3. Pr. 3, 4.</p>
+    <p class="footnote">4. Pr. 3, 14.</p>
+    <p>On supplée au manque d'adjectifs de deux manières:</p>
+    <p>1. Au moyen de l'annexion (158, 1):</p>
+    <p><em>ⲡⲓⲣⲁⲛ ⲛ̀ⲟⲩϫⲁⲓ</em> «le nom salutaire»<sup class="footnote">1</sup>.</p>
+    <p><em>ϯⲥⲙⲏ ⲛ̀ⲛⲟⲩϯ</em> «la voix divine»<sup class="footnote">2</sup>.</p>
+    <p>2. Au moyen du qualitatif des verbes, précédé du relatif <em>ⲉⲧ</em> pour les substantifs <i>déterminés</i> et de l'auxiliaire <em>ⲉ⸗</em> avec les suffixes (3<sup>e</sup> présent) pour les substantifs <i>indéterminés</i>:</p>
+    <table>
+      <tr>
+        <td>Sg.</td><td><i>dét.</i></td><td><em>ⲡⲓⲡⲛⲉⲩⲙⲁ ⲉⲑⲟⲩⲁⲃ</em></td><td>«L'Esprit-Saint»;</td>
+      </tr>
+      <tr>
+        <td></td><td><i>indét.</i></td><td><em>ⲟⲩⲡⲛⲉⲩⲙⲁ ⲉϥⲟⲩⲁⲃ</em></td><td>«un esprit saint»<sup class="footnote">3</sup>.</td>
+      </tr>
+      <tr>
+        <td>Pl.</td><td><i>dét.</i></td><td><em>ⲛⲓⲙⲱⲓⲧ ⲉⲧⲥⲟⲩⲧⲱⲛ</em></td><td>«les voies droites»<sup class="footnote">4</sup>;</td>
+      </tr>
+      <tr>
+        <td></td><td><i>indét.</i></td><td><em>ϩⲁⲛⲙⲁⲛ̀ⲙⲟϣⲓ ⲉⲩⲥⲟⲩⲧⲱⲛ</em><td>«des voies droites»<sup class="footnote">5</sup>.</td>
+      </tr>
+    </table>
+    <p>Pour ce qui concerne la détermination, il y a deux remarques à faire:</p>
+    <p>1. Lorsque le qualitatif est attribut, il a toujours la forme indéterminée:</p>
+    <p><em>ⲉϥⲉⲁⲣⲉϩ ⲉ ⲛⲉⲕⲙⲁⲛ̀ϭⲟϫⲓ ⲉⲩ-ⲥⲟⲩⲧⲱⲛ</em> «il gardera tes voies droites»<sup class="footnote">6</sup>.</p>
+    <p>2. Tout mot suivi de <em>ⲛⲓⲃⲉⲛ</em> est considéré comme déterminé et demande <em>ⲉⲧ</em>:</p>
+    <p><em>ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧ-ⲧⲁⲓⲏⲟⲩⲧ</em> «tout ce qui est précieux»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧ-ϣⲟⲡ ϧⲉⲛ ⲛⲓⲃⲁⲕⲓ ⲛⲉⲙ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧ-ⲣⲏⲧ ⲉⲡϣⲱⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲕⲁϩⲓ</em> «tous ceux qui sont dans les villes et tout ce qui pousse de terre»<sup class="footnote">8</sup>.</p>
+    <p class="footnote">1. Th. 131.</p>
+    <p class="footnote">2. G. 84.</p>
+    <p class="footnote">3. Th. 171.</p>
+    <p class="footnote">4. Pr. 2, 13.</p>
+    <p class="footnote">5. Pr. 2, 20.</p>
+    <p class="footnote">6. Pr. 4, 27.</p>
+    <p class="footnote">7. Pr. 3, 15.</p>
+    <p class="footnote">8. Gen. 19, 25.</p>
   </div>
 </div>
 	</body>
