--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2144,6 +2144,32 @@
     <p class="footnote">6. Pr. 4, 27.</p>
     <p class="footnote">7. Pr. 3, 15.</p>
     <p class="footnote">8. Gen. 19, 25.</p>
+    <p>II. Place de l'adjectif.</p>
+    <p>Les adjectifs primitifs et dérivés se placent soit avant, soit après le substantif; les adjectifs composés se placent toujours après.</p>
+    <p>Le mot qui est au premier rang, substantif ou adjectif, reçoit l'article que demande le sens; celui qui est au second rang est toujours uni au premier au moyen de <em>ⲛ̀</em> et sans article:</p>
+    <p><em>ϯⲃⲁⲕⲓ ⲛ̀ⲣⲁⲙⲁⲟ</em> «la ville opulente»;</p>
+    <p><em>ϯⲛⲓϣϯ ⲙ̀ⲃⲁⲕⲓ</em> «la grande ville»;</p>
+    <p><em>ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲥⲁⲃⲉ</em> «l'homme sage (49, 2)»<sup class="footnote">1</sup>.</p>
+    <p><em>ϩⲁⲛⲥⲁⲃⲏ ⲛ̀ⲥϩⲓⲙⲓ</em> «les femmes sages»<sup class="footnote">2</sup>.</p>
+    <p>Les adjectifs suivants se placent toujours avant le substantif:</p>
+    <p><em>ⲛⲓϣϯ</em> «grand»,</p>
+    <p><em>ϩⲟⲩⲓⲧ</em> «premier»,</p>
+    <p><em>ⲛⲟϫ</em> «grand»,</p>
+    <p><em>ϧⲁⲉ</em> «dernier»,</p>
+    <p><em>ⲕⲟⲩϫⲓ</em> «petit»,</p>
+    <p><em>ⲙⲏϣ</em> «nombreux»,</p>
+    <p>et les deux adjectifs grecs <em>ⲁⲅⲓⲟⲥ</em> et <em>ⲙⲟⲛⲟⲅⲉⲛⲏⲥ</em>:</p>
+    <p><em>ⲛⲉⲕⲁⲅⲓⲟⲥ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «tes saints disciples»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲡⲓⲙⲟⲛⲟⲅⲉⲛⲏⲥ ⲛ̀ϣⲏⲣⲓ</em> «le fils unique».</p>
+    <p>Quand il y a deux adjectifs, un seul peut précéder le substantif:</p>
+    <p><em>ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲁⲗⲟⲩ ⲛ̀ⲥⲁⲓⲉ</em> «un beau petit enfant»<sup class="footnote">4</sup>;</p>
+    <p><em>ⲡⲓⲡⲓⲥⲧⲟⲥ ⲙ̀ⲃⲱⲕ ⲟⲩⲟϩ ⲛ̀ⲥⲁⲃⲉ</em> «le serviteur fidèle et prudent»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲛⲓⲃⲉⲛ</em> «tout» se place toujours, sans <em>ⲛ̀</em>, après le substantif qui reste au singulier, sans article:</p>
+    <p class="footnote">1. Pr. 14, 17.</p>
+    <p class="footnote">2. Pr. 14, 1.</p>
+    <p class="footnote">3. Br. 132.</p>
+    <p class="footnote">4. AM. 1, 15.</p>
+    <p class="footnote">5. Mt. 24, 45.</p>
   </div>
 </div>
 	</body>
